Fixed: Search Box gadget dropdown wrapping issue

--- a/features/org.wso2.carbon.analytics.esb.feature/src/main/capp/GadgetDateRangePicker_1.0.0/Date_Range_Picker/css/daterangepicker.css
+++ b/features/org.wso2.carbon.analytics.esb.feature/src/main/capp/GadgetDateRangePicker_1.0.0/Date_Range_Picker/css/daterangepicker.css
@@ -180,7 +180,7 @@
 }
 
 .daterangepicker td.in-range {
-  background: #ebf4f8;
+  background: #F9F9F9;
   border-radius: 0;
 }
 
