--- a/features/org.wso2.carbon.analytics.esb.feature/src/main/capp/GadgetSearchBox_1.0.0/Search_Box/css/autocomplete.css
+++ b/features/org.wso2.carbon.analytics.esb.feature/src/main/capp/GadgetSearchBox_1.0.0/Search_Box/css/autocomplete.css
@@ -14,7 +14,8 @@
 
 .tt-menu {
     padding: 8px;
-    background-color: #fff;
+    background-color: #1E2531;
+    color: #fff;
     margin: 5px 0;
     outline: 0;
     border: 1px solid rgba(0,0,0,.15);
